--- a/python/Python Intro 1.ipynb
+++ b/python/Python Intro 1.ipynb
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
        "'Hello, my name is Moshe.\\nMy car is green.\\nMy house is green.'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -554,17 +554,6 @@
    ],
    "source": [
     "len(txt)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Complex data types\n",
-    "\n",
-    "## Lists\n",
-    "\n",
-    "Lists are composed of several values separated by comma. Lists in Python are almost similar to vectors in R, but can include different data types. "
    ]
   },
   {
@@ -772,8 +761,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Complex data types\n",
+    "\n",
+    "## Lists\n",
+    "\n",
+    "Lists are composed of several values separated by comma. Lists in Python are almost similar to vectors in R, but can include different data types. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -782,7 +782,7 @@
        "[1, 2, 3, 'ABC', False]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +810,7 @@
        "list"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -864,7 +864,7 @@
        "[1, 2, 3]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -875,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -884,7 +884,7 @@
        "[3, 'ABC']"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -918,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -927,7 +927,7 @@
        "[1, 2, 3, 4, 5, 'A', 'B', 'C']"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -939,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -948,7 +948,7 @@
        "[1, 2, 3, 4, 5, 'A', 'B', 'C', 'D']"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -961,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -970,7 +970,7 @@
        "[1, 2, 3, 4, 5, 'A', 'B', 'C', 'D', '0', 'A', 'B']"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -983,16 +983,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 2, 3, 5, 6, 6, 6, 'A', 'B', 'C', 'D', 'A']"
+       "[1, 2, 3, 4, 5, 6, 'A', 'B', 'C', 'D', '0', 'A', 'B']"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1005,19 +1005,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "list.remove(x): x not in list",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-89-ccc2eed9d579>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# .remove(x) -> remove any appearance of x in the list\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0ma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'0'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: list.remove(x): x not in list"
-     ]
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 'A', 'B', 'C', 'D', 'A', 'B']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1028,16 +1027,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 2, 3, 5, 6, 'A', 'B', 'C', 'D', 'A']"
+       "[1, 2, 3, 5, 6, 'A', 'B', 'C', 'D', 'A', 'B']"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1454,7 +1453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1463,7 +1462,7 @@
        "(1, 2, 3, 'A', 'B', 'C')"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1482,7 +1481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1491,7 +1490,7 @@
        "((1, 2, 3, 'A', 'B', 'C'), (0, 1, 0, 0))"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1511,7 +1510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1520,7 +1519,7 @@
        "([1, 2, 3], [4, 5, 6])"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1532,7 +1531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1541,7 +1540,7 @@
        "([1, 0, 3], [4, 5, 6])"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1553,7 +1552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1561,10 +1560,10 @@
      "evalue": "'tuple' object does not support item assignment",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-115-fc2e1bf20048>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0md\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'A'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-17-fc2e1bf20048>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0md\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0md\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'A'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0md\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
      ]
     }
    ],
@@ -1575,16 +1574,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "([1, 0, 3, 'A', 'A'], [4, 5, 6])"
+       "([1, 0, 3, 'A'], [4, 5, 6])"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1602,7 +1601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1611,7 +1610,7 @@
        "(1, 2, 3, 'A', 'B', 'C', False)"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1632,7 +1631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1641,7 +1640,7 @@
        "{' ', 'a', 'e', 'h', 'i', 'l', 'm', 'p', 'r', 's', 't', 'y'}"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2277,28 +2276,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "400.0\n",
-      "266.6666666666667\n",
-      "177.7777777777778\n",
-      "118.51851851851853\n",
-      "79.01234567901236\n",
-      "52.67489711934157\n",
-      "35.11659807956105\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "y = 600\n",
     "while(y > 50):\n",
     "    y = (y*2) / 3\n",
     "    print(y)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "\n",
     "    "
    ]
   },
@@ -2327,7 +2324,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
