--- a/python/Home exercise - Part 1.ipynb
+++ b/python/Home exercise - Part 1.ipynb
@@ -18,10 +18,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=[1,2,3,4,5,6,7,8,9,10]\n",
+    "a"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -32,10 +46,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 20]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.append(20)\n",
+    "a"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -46,10 +74,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a.insert(4,0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 0, 0, 5, 6, 7, 8, 9, 10, 20]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.insert(4,0)\n",
+    "a"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -60,10 +111,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[20, 10, 9, 8, 7, 6, 5, 4, 3, 2, 1, 0, 0]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b = a\n",
+    "b.sort(reverse=True)\n",
+    "b"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -74,10 +140,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[20, 10, 9, 8, 7, 6, 5, 4, 3, 2, 1]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.pop(len(a)-1)\n",
+    "a.pop(len(a)-1)\n",
+    "a"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -88,10 +169,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 20]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.reverse()\n",
+    "a"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -102,10 +197,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(a)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -116,10 +224,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "min(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "75"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "sum(a)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -130,10 +298,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 20, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 20]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a*2"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -144,10 +325,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for /: 'list' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-34-92d60c1a447d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0ma\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for /: 'list' and 'int'"
+     ]
+    }
+   ],
+   "source": [
+    "#no i cant"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -160,16 +355,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 2, 3, 4, 'c', 'd', 'e')"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b=(1,2,3,4,'c','d','e')\n",
+    "=b"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "2. Append two booleans (false, true) to the tupple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 2, 3, 4, 'c', 'd', 'e', False, True)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b=b+(False,)+(True,)\n",
+    "b"
    ]
   },
   {
@@ -188,10 +418,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4, 'c', 'd')"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b[3:6]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -202,10 +445,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([False, True], [1, 2, 3, 4], ['c', 'd', 'e'])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l=([],[],[])\n",
+    "for w in b:\n",
+    "    if(isinstance(w,bool)):\n",
+    "       l[0].append(w)\n",
+    "    elif(isinstance(w,int)):\n",
+    "       l[1].append(w)\n",
+    "    else:\n",
+    "       l[2].append(w)\n",
+    "l       "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -224,10 +488,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'A',\n",
+       " 'Shallow',\n",
+       " 'a',\n",
+       " 'an',\n",
+       " 'bit-wise',\n",
+       " 'copy',\n",
+       " 'created',\n",
+       " 'exact',\n",
+       " 'has',\n",
+       " 'in',\n",
+       " 'is',\n",
+       " 'new',\n",
+       " 'object',\n",
+       " 'object.',\n",
+       " 'of',\n",
+       " 'original',\n",
+       " 'that',\n",
+       " 'the',\n",
+       " 'values'}"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "txt=\"Shallow copy is a bit-wise copy of an object. A new object is created that has an exact copy of the values in the original object\"\n",
+    "a=set(txt.split(\" \") )\n",
+    "a"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -238,10 +535,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'A',\n",
+       " 'Shallow',\n",
+       " 'a',\n",
+       " 'an',\n",
+       " 'bit-wise',\n",
+       " 'copy',\n",
+       " 'created',\n",
+       " 'exact',\n",
+       " 'has',\n",
+       " 'in',\n",
+       " 'is',\n",
+       " 'new',\n",
+       " 'object',\n",
+       " 'of',\n",
+       " 'original',\n",
+       " 'that',\n",
+       " 'the',\n",
+       " 'values'}"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set(txt.replace('.', '').split(\" \"))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -263,10 +590,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1020: {'name': 'Harry smith',\n",
+       "  'position': 'sales manager',\n",
+       "  'phone': '030-223.65.44'},\n",
+       " 2201: {'name': 'Margaret Holsum',\n",
+       "  'position': 'Sales Representative',\n",
+       "  'phone': '030-223.64.12'}}"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d={1020:{'name':'Harry smith','position': 'sales manager','phone':'030-223.65.44'},\n",
+    "  2201:{'name':'Margaret Holsum','position': 'Sales Representative','phone':'030-223.64.12'}}\n",
+    "d"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -277,10 +624,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys([1020, 2201])"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d.keys()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -291,10 +651,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_values([{'name': 'Harry smith', 'position': 'sales manager', 'phone': '030-223.65.44'}, {'name': 'Margaret Holsum', 'position': 'Sales Representative', 'phone': '030-223.64.12'}])"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d.values()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -305,10 +678,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Margaret Holsum', 'position': 'Sales Representative', 'phone': '030-223.64.12'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(d[2201])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -321,10 +704,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "11\n",
+      "13\n",
+      "17\n",
+      "19\n",
+      "23\n",
+      "29\n",
+      "31\n",
+      "37\n",
+      "41\n",
+      "43\n",
+      "47\n",
+      "53\n",
+      "59\n",
+      "61\n",
+      "67\n",
+      "71\n",
+      "73\n",
+      "79\n",
+      "83\n",
+      "89\n",
+      "97\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(2)\n",
+    "for x in range(3,100):\n",
+    "    c=0\n",
+    "    for y in range(2,x):\n",
+    "        if (x % y==0):\n",
+    "            c=c+1\n",
+    "    if(c==0):\n",
+    "        print(x)\n",
+    "\n",
+    "        \n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "11\n",
+      "13\n",
+      "17\n",
+      "19\n",
+      "23\n",
+      "29\n",
+      "31\n",
+      "37\n",
+      "41\n",
+      "43\n",
+      "47\n",
+      "53\n",
+      "59\n",
+      "61\n",
+      "67\n",
+      "71\n",
+      "73\n",
+      "79\n",
+      "83\n",
+      "89\n",
+      "97\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in range(2,100):\n",
+    "    c=0\n",
+    "    if (x==2):\n",
+    "        print(x)\n",
+    "    else:\n",
+    "        for y in range(2,x):\n",
+    "             if (x % y==0):\n",
+    "                c=c+1\n",
+    "        if(c==0):\n",
+    "            print(x)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -335,10 +815,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-55-aa2393e9a712>, line 10)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-55-aa2393e9a712>\"\u001b[1;36m, line \u001b[1;32m10\u001b[0m\n\u001b[1;33m    break:\u001b[0m\n\u001b[1;37m         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=list(range(2,100))\n",
+    "x=1\n",
+    "while(x<100):\n",
+    "    x=x+1    \n",
+    "    j=1\n",
+    "    while(j<x):\n",
+    "        j=j+1\n",
+    "        if(x%j==0):\n",
+    "            a.remove(x)\n",
+    "            break\n",
+    "print(a)\n",
+    "            \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -357,7 +869,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
