--- a/python/Python Intro 2a.ipynb
+++ b/python/Python Intro 2a.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
        "23.671253629592222"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
        "[1, 4, 9, 16, 25]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,18 +103,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "def square2(x):\n",
-    "    res = [i**2 for i in x] #meaning of i**2 is \n",
+    "    res = [i**2 for i in x]\n",
     "    return(res)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
        "[1, 4, 9, 16, 25]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,16 +141,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<map at 0x7f7fc830eeb8>"
+       "<map at 0x7f058c1deb38>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -181,28 +181,8 @@
     }
    ],
    "source": [
-    "for i in res: \n",
+    "for i in res:\n",
     "    print(i)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 4, 9, 16, 25]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list(res)"
    ]
   },
   {
@@ -210,46 +190,6 @@
    "metadata": {},
    "source": [
     "Another way to do the last operation is by using the <i>'lambda'</i> function. This function is called also an anonymous function because it does not need a name. Lambda is a vesatil generic function that admits an input and an output. The output is determined by the data manipulation we want to generate. The previous example can be created with lambda as follows: "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<function __main__.<lambda>(i)>"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lambda i:i**2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "_(3) # this is the way we use the function lambda,we can use it only one time, it is like a \"disposable\" functionlike anoonymous function"
    ]
   },
   {
@@ -295,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 333,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +247,7 @@
     "        else:\n",
     "            res = weight / height**2\n",
     "            return(res)\n",
-    "    except ZeroDivisionError: #the error is an existing error\n",
+    "    except ZeroDivisionError:\n",
     "        print(\"Please give a height different of zero\")\n",
     "    except TypeError:\n",
     "        print(\"Please enter only numeric value\")\n",
@@ -317,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 334,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +266,7 @@
        "24.074074074074073"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 334,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 335,
    "metadata": {},
    "outputs": [
     {
@@ -403,76 +343,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "86400"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def convert2sec(a,x):\n",
-    "    if (x=='d'):\n",
-    "        res=a*24*3600\n",
-    "        return(res)\n",
-    "    elif (x=='h'):\n",
-    "        res=a*3600\n",
-    "        return(res)\n",
-    "    elif(x=='m'):\n",
-    "        res=a*60\n",
-    "        return(res)\n",
-    "convert2sec(1,'d')\n",
-    "        \n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def convert2sec(time,timeframe):\n",
-    "    out=\"%d %s = %d seconds\"\n",
-    "    tf=timeframe.lower()[0]\n",
-    "    if(time==0 or timeframe==''):\n",
-    "        return(\"please enter correct parameter\")\n",
-    "    elif(tf=='d'):\n",
-    "        return(out % (time,timeframe.lower(),time*24*60*60))\n",
-    "    elif(tf=='h'):\n",
-    "        return(out % (time,timeframe.lower(),time*60*60))\n",
-    "    elif(tf=='m'):\n",
-    "        return(out % (time,timeframe.lower(),time*60))\n",
-    "    else:\n",
-    "        print(\"Can't calculate a value for such timeframe (%s) \" % timeframe)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'2 hours = 7200 seconds'"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "convert2sec(2,'hours')"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -661,7 +535,7 @@
    ],
    "source": [
     "class Student:\n",
-    "    def setName(self,name):  #self is a word which belongs to python syntax#\n",
+    "    def setName(self,name):\n",
     "        self.name = name\n",
     "    def getName(self):\n",
     "        return(self.name)\n",
@@ -774,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -791,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -818,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -844,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -866,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 340,
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +749,7 @@
        "''"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 340,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -893,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -926,53 +800,6 @@
     "print(clsrmObj_1)\n",
     "print(clsrmObj_2)\n",
     "print(clsrmObj_3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Hannah'"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "clsrmObj_3.getName()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'David'"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "clsrmObj_1.name"
    ]
   },
   {
@@ -1015,76 +842,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "class car:\n",
-    "    def __init__(self,name=\"\"):\n",
-    "        self.name = name\n",
-    "    def setName(self,name):\n",
-    "        self.name = name\n",
-    "    def getName(self):\n",
-    "        return(self.name)\n",
-    "    def __str__(self):\n",
-    "        return \"The name of the car is %s\" % self.name\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Company(car):\n",
-    "    def __init__(self,name=\"\",company=\"\",model=\"\",bodystyle=\"\",doors=\"\",cylinders=\"\",hybrid=\"\"):\n",
-    "        self.name, self.model, self.bodystyle, self.cylinders,self.doors, self.hybrid = name, model, bodystyle, cylinders, doors, hybrid\n",
-    "    def setmodel(self, model):\n",
-    "        self.model =model\n",
-    "    def getmodel(self):\n",
-    "        return self.company\n",
-    "    def setbodystyle(self,cylinders):\n",
-    "        self.bodystyle = bodystyle\n",
-    "    def getbodystyle(self):\n",
-    "        return self.bodystyle\n",
-    "    def setcylinders(self,cylinders):\n",
-    "        self.cylinders = cylinders\n",
-    "    def getcylinders(self):\n",
-    "        return self.cylinders\n",
-    "    def setdoors(self,doors):\n",
-    "        self.doors = doors\n",
-    "    def getdoors(self):\n",
-    "        return self.doors\n",
-    "    def sethybrid(self,hybrid):\n",
-    "        self.hybrid = hybrid\n",
-    "    def gethybrid(self):\n",
-    "        return self.hybrid\n",
-    "    def __str__(self):\n",
-    "    \n",
-    "        return '''company: %s \\nmodel: %s \\n %s n\\cylinders:%s \\ndoors:%s \\nhybrid: %s ''' % (self.name, self.model, self.bodystyle, self.cylinders, self.doors, self.hybrid)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "company: Toyota \n",
-      "model: sedan \n",
-      " 4 n\\cylinders:hybrid \n",
-      "doors:4 \n",
-      "hybrid:  \n"
-     ]
-    }
-   ],
-   "source": [
-    "compObj_1 = Company(\"Toyota\",\"Corola\",\"sedan\",\"4\",\"4\",\"hybrid\")\n",
-    "print(compObj_1)\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1134,21 +895,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sorry, we will not use java on machine learning!\n"
+      "We will use R extensively on machine learning!\n"
      ]
     }
    ],
    "source": [
     "import ds_demo as ds\n",
     "\n",
-    "ds.checkLanguage(\"java\")\n"
+    "ds.checkLanguage(\"R\")\n"
    ]
   },
   {
@@ -3703,7 +3464,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
