--- a/python/Python Intro 3.ipynb
+++ b/python/Python Intro 3.ipynb
@@ -3146,20 +3146,178 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "('01000', \"[01000] [unixODBC][Driver Manager]Can't open lib 'SQL Server Native Client 11.0' : file not found (0) (SQLDriverConnect)\")",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mError\u001b[0m                                     Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-f721290ee299>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpyodbc\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m cnxn = pyodbc.connect(\"Driver={SQL Server Native Client 11.0};\"\n\u001b[0m\u001b[1;32m      3\u001b[0m                       \u001b[0;34m\"Server=192.168.1.1;\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m                       \u001b[0;34m\"Database=COLLEGE;\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m                       \"Trusted_Connection=yes;\")\n",
+      "\u001b[0;31mError\u001b[0m: ('01000', \"[01000] [unixODBC][Driver Manager]Can't open lib 'SQL Server Native Client 11.0' : file not found (0) (SQLDriverConnect)\")"
+     ]
+    }
+   ],
    "source": [
+    "### on my personal computer i use this code\n",
     "import pyodbc \n",
     "cnxn = pyodbc.connect(\"Driver={SQL Server Native Client 11.0};\"\n",
-    "                      \"Server=WIN10\\TCDS;\"\n",
+    "                      \"Server=MY PC NAME;\"\n",
     "                      \"Database=COLLEGE;\"\n",
     "                      \"Trusted_Connection=yes;\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "InterfaceError",
+     "evalue": "('IM002', '[IM002] [unixODBC][Driver Manager]Data source name not found and no default driver specified (0) (SQLDriverConnect)')",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mInterfaceError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-b5af30e079ce>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpyodbc\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m cnxn = pyodbc.connect(\"DSN=College2;\"\n\u001b[0m\u001b[1;32m      3\u001b[0m                       \u001b[0;34m\"Server=192.168.1.1;\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m                       \u001b[0;34m\"Database=COLLEGE;\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m                       \"Trusted_Connection=yes;\")\n",
+      "\u001b[0;31mInterfaceError\u001b[0m: ('IM002', '[IM002] [unixODBC][Driver Manager]Data source name not found and no default driver specified (0) (SQLDriverConnect)')"
+     ]
+    }
+   ],
+   "source": [
+    "### on my personal computer i use this code \n",
+    "import pyodbc \n",
+    "cnxn = pyodbc.connect(\"DSN=College2;\"\n",
+    "                      \"Server=my personal computer;\"\n",
+    "                      \"Database=COLLEGE;\"\n",
+    "                      \"Trusted_Connection=yes;\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### on the linux server we connect this code\n",
+    "\n",
+    "\n",
+    "import pyodbc \n",
+    "cnxn = pyodbc.connect(\"Driver={ODBC Driver 17 for SQL Server};\"\n",
+    "                      \"Server=192.168.1.1;\"\n",
+    "                      \"Database=COLLEGE;\"\n",
+    "                      \"uid=dsuser04;\"\n",
+    "                      \"pwd=DSuser04!;\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CourseId</th>\n",
+       "      <th>CourseName</th>\n",
+       "      <th>DepartmentID</th>\n",
+       "      <th>TeacherId</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>English Begginers</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Advanced English</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Proffesional English</td>\n",
+       "      <td>1</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Mathematics 101</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Matematics Advanced</td>\n",
+       "      <td>2</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   CourseId            CourseName  DepartmentID  TeacherId\n",
+       "0         1     English Begginers             1         15\n",
+       "1         2      Advanced English             1         15\n",
+       "2         3  Proffesional English             1         15\n",
+       "3         4       Mathematics 101             2          2\n",
+       "4         5   Matematics Advanced             2         13"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "### on the linux server we connect this code\n",
+    "import pandas as pd\n",
+    "import pyodbc \n",
+    "\n",
+    "\n",
+    "cnxn = pyodbc.connect(\"Driver={ODBC Driver 17 for SQL Server};\"\n",
+    "                      \"Server=192.168.1.1;\"\n",
+    "                      \"Database=COLLEGE;\"\n",
+    "                      \"uid=dsuser04;\"\n",
+    "                      \"pwd=DSuser04!;\")\n",
+    "\n",
+    "df=pd.read_sql(\"SELECT * FROM Courses\",cnxn)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -3178,12 +3336,13 @@
     "cursor.execute('SELECT * FROM Departments')\n",
     "\n",
     "for row in cursor:\n",
-    "    print('row = %r' % (row,))"
+    "    print('row = %r' % (row,))\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -3383,10 +3542,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#sqlite is a database in a file  we can poduce tables views, tcds_example.db is the database name \n",
     "import sqlite3\n",
     "conn = sqlite3.connect(\"tcds_example.db\")\n",
     "c = conn.cursor()\n"
@@ -3394,16 +3554,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x2b1df99c340>"
+       "<sqlite3.Cursor at 0x7f0e400688f0>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3417,16 +3577,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x2b1df99c340>"
+       "<sqlite3.Cursor at 0x7f0e400688f0>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3448,16 +3608,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x2b1df99c340>"
+       "<sqlite3.Cursor at 0x7f0e400688f0>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3468,7 +3628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -3486,7 +3646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -3504,7 +3664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -3522,7 +3682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -3540,7 +3700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
